//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk, unique]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  active Boolean [not null, default: true]
  role Role [not null, default: 'BUYER']
  catalog Catalog
  buyerOrders Order [not null]
  sellerOrders Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Catalog {
  id String [pk, unique]
  seller User [not null]
  sellerId String [unique, not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Product {
  id String [pk, unique]
  name String [not null]
  price Float [not null]
  catalog Catalog
  catalogId String
  orders Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Order {
  id String [pk, unique]
  products Product [not null]
  buyer User [not null]
  buyerId String [not null]
  seller User [not null]
  sellerId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table OrderToProduct {
  ordersId String [ref: > Order.id]
  productsId String [ref: > Product.id]
}

Enum Role {
  SELLER
  BUYER
}

Enum Gender {
  MALE
  FEMALE
}

Ref: Catalog.sellerId - User.id [delete: Cascade]

Ref: Product.catalogId > Catalog.id [delete: Cascade]

Ref: Order.buyerId > User.id [delete: Cascade]

Ref: Order.sellerId > User.id [delete: Cascade]